iss#247 Chapters parsing: chapters from MKV are not parsed, version 0.15.6